ai tournament + spark