@@ -8,6 +8,26 @@ val scalaFxVersion   = "21.0.0-R32"
 val javaFxVersion    = "21.0.1"
 val http4sVersion    = "0.23.29"
 val gatlingVersion   = "3.11.3"
+// Spark 3.5.x requires Scala 2.13 — sparkAnalytics module overrides scalaVersion accordingly.
+val sparkVersion     = "3.5.3"
+
+// JVM --add-opens required for Spark 3.5.x on Java 17+.
+val sparkJvmOpens: Seq[String] = Seq(
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.net=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+  "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+  "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+  "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+  "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+)
 
 lazy val osClassifier: String = System.getProperty("os.name") match {
   case n if n.startsWith("Windows") => "win"
@@ -557,6 +577,149 @@ lazy val lichessBridgeService = project
   )
   .dependsOn(observability, notation, aiContract)
 
+// ── Bot Evaluation Arena ──────────────────────────────────────────────────────
+
+// Module: arena-events (GameEvent sealed trait, GameEventJson codec, EventEmitter)
+lazy val arenaEvents = project
+  .in(file("apps/bot-arena/arena-events"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0,
+    libraryDependencies += "com.lihaoyi" %% "ujson" % "4.0.2"
+  )
+
+// Module: arena-core (BotProfile, BotPlayer, GameRunner skeleton, Tournament skeleton)
+lazy val arenaCore = project
+  .in(file("apps/bot-arena/arena-core"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0
+  )
+  .dependsOn(arenaEvents, domain)
+
+// Module: arena-writer-jsonl (JsonlFileWriter)
+lazy val arenaWriterJsonl = project
+  .in(file("apps/bot-arena/writers/jsonl"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0
+  )
+  .dependsOn(arenaEvents)
+
+// Module: spark-analytics (Spark batch analytics — Scala 2.13; Spark 3.5.x requires Scala 2.13)
+// Module: arena-writer-kafka (Kafka EventEmitter implementation)
+lazy val arenaWriterKafka = project
+  .in(file("apps/bot-arena/writers/kafka"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0,
+    libraryDependencies += "org.apache.kafka" % "kafka-clients" % "3.7.1"
+  )
+  .dependsOn(arenaEvents)
+
+lazy val sparkAnalytics = project
+  .in(file("apps/spark-analytics"))
+  .disablePlugins(wartremover.WartRemover)
+  .settings(
+    scalaVersion             := "2.13.14",
+    coverageEnabled          := false,
+    Compile / doc / sources  := Seq.empty,
+    name                     := "spark-analytics",
+    Compile / mainClass      := Some("chess.analytics.GameAnalyticsJob"),
+    libraryDependencies ++= Seq(
+      "org.apache.spark" %% "spark-sql" % sparkVersion,
+      "org.apache.spark" %% "spark-sql-kafka-0-10" % sparkVersion,
+      "org.scalatest"    %% "scalatest" % "3.2.19"     % Test
+    ),
+    fork                     := true,
+    // Run from project root so relative paths resolve consistently with demoHeuristicTournament.
+    run  / baseDirectory     := (ThisBuild / baseDirectory).value,
+    run  / javaOptions       ++= sparkJvmOpens,
+    Test / javaOptions       ++= sparkJvmOpens :+
+      s"-DprojectRoot=${(ThisBuild / baseDirectory).value.getAbsolutePath}"
+  )
+
+// Module: arena-bots-heuristic (RandomBot, CaptureFirstBot, MaterialGreedyBot)
+lazy val arenaBotsHeuristic = project
+  .in(file("apps/bot-arena/bots/heuristic"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0
+  )
+  .dependsOn(arenaCore, arenaWriterJsonl % Test)
+
+// Module: arena-bots-uci (UCI adapter + Stockfish bot profiles)
+lazy val arenaBotsUci = project
+  .in(file("apps/bot-arena/bots/uci"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0
+  )
+  .dependsOn(
+    arenaCore,
+    notation,
+    arenaWriterJsonl % Test,
+    arenaBotsHeuristic % Test
+  )
+
+// App: arena-demo-heuristic (runnable demo — wires bots + writer)
+lazy val arenaDemoHeuristic = project
+  .in(file("apps/bot-arena/demo"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0,
+    Compile / mainClass      := Some("chess.arena.demo.HeuristicTournamentDemo"),
+    run / fork               := true,
+    // Run from project root so relative paths (target/arena/...) resolve consistently.
+    run / baseDirectory      := (ThisBuild / baseDirectory).value
+  )
+  .dependsOn(arenaBotsHeuristic, arenaWriterJsonl)
+
+// App: arena-demo-kafka (heuristic tournament to Kafka; optional JSONL dual-write)
+lazy val arenaDemoKafka = project
+  .in(file("apps/bot-arena/demo-kafka"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0,
+    Compile / mainClass      := Some("chess.arena.demo.KafkaHeuristicTournamentDemo"),
+    run / fork               := true,
+    run / baseDirectory      := (ThisBuild / baseDirectory).value
+  )
+  .dependsOn(arenaBotsHeuristic, arenaWriterJsonl, arenaWriterKafka)
+
+// App: arena-demo-stockfish (optional runnable demo; requires Stockfish binary)
+lazy val arenaDemoStockfish = project
+  .in(file("apps/bot-arena/demo-stockfish"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0,
+    Compile / mainClass      := Some("chess.arena.demo.StockfishTournamentDemo"),
+    run / fork               := true,
+    run / baseDirectory      := (ThisBuild / baseDirectory).value
+  )
+  .dependsOn(arenaBotsHeuristic, arenaBotsUci, arenaWriterJsonl)
+
+// Module: arena-bots-ai (SearchessAI HTTP adapter — BotPlayer over /v1/move-suggestions)
+lazy val arenaBotsAi = project
+  .in(file("apps/bot-arena/bots/ai"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0
+  )
+  .dependsOn(arenaCore, notation, aiContract, arenaWriterJsonl % Test)
+
+// App: arena-demo-ai (SearchessAI mixed tournament demo)
+lazy val arenaDemoAi = project
+  .in(file("apps/bot-arena/demo-ai"))
+  .settings(
+    commonSettings,
+    coverageMinimumStmtTotal := 0,
+    Compile / mainClass      := Some("chess.arena.demo.SearchessAiTournamentDemo"),
+    run / fork               := true,
+    run / baseDirectory      := (ThisBuild / baseDirectory).value
+  )
+  .dependsOn(arenaBotsAi, arenaBotsHeuristic, arenaBotsUci, arenaWriterJsonl)
+
 // App: chess-streaming
 lazy val chessStreaming = project
   .in(file("apps/chess-streaming"))
@@ -702,6 +865,30 @@ addCommandAlias("testAllAdapters",
 addCommandAlias("testApps",
   ";startupShared/test;gameService/test;historyService/test;userService/test;aiService/test;desktopGui/test;tuiCli/test")
 addCommandAlias("testLichessBridgeService", "lichessBridgeService/test")
+addCommandAlias("testArenaEvents",          "arenaEvents/test")
+addCommandAlias("testArenaCore",            "arenaCore/test")
+addCommandAlias("testArenaBotsHeuristic",   "arenaBotsHeuristic/test")
+addCommandAlias("testArenaBotsUci",         "arenaBotsUci/test")
+addCommandAlias("testArenaBotsAi",          "arenaBotsAi/test")
+addCommandAlias("testArenaWriterKafka",     "arenaWriterKafka/test")
+addCommandAlias("testArena",                ";arenaEvents/test;arenaCore/test;arenaBotsHeuristic/test;arenaBotsUci/test")
+addCommandAlias("testSparkAnalytics",       "sparkAnalytics/test")
+addCommandAlias("demoHeuristicTournament",  "arenaDemoHeuristic/run")
+addCommandAlias("demoKafkaHeuristicTournament", "arenaDemoKafka/run")
+addCommandAlias("demoStockfishTournament",  "arenaDemoStockfish/run")
+addCommandAlias("demoSparkAnalytics",
+  "sparkAnalytics/run target/arena/heuristic-tournament/game-events.jsonl target/spark-analytics")
+addCommandAlias("demoSparkAnalyticsStockfish",
+  "sparkAnalytics/run target/arena/stockfish-tournament/game-events.jsonl target/spark-analytics-stockfish")
+addCommandAlias("demoStockfishSparkAnalytics",
+  "sparkAnalytics/run target/arena/stockfish-tournament/game-events.jsonl target/spark-analytics-stockfish")
+addCommandAlias("demoSearchessAiTournament",  "arenaDemoAi/run")
+addCommandAlias("demoSearchessAiSparkAnalytics",
+  "sparkAnalytics/run target/arena/searchess-ai-tournament/game-events.jsonl target/spark-analytics-searchess-ai")
+addCommandAlias("stockfishSmokeCheck",
+  "arenaDemoStockfish/runMain chess.arena.demo.StockfishSmokeCheck")
+addCommandAlias("demoSparkStreamingAnalytics",
+  "sparkAnalytics/runMain chess.analytics.GameAnalyticsStreamingJob")
 
 // ── Compile slices ────────────────────────────────────────────────────────────
 
@@ -734,5 +921,8 @@ lazy val root = project
     adapterRestContract, adapterRestHttp4s,
     adapterWebsocket, adapterGui, adapterTui,
     startupShared, gameService, historyService, userService, aiService, desktopGui, tuiCli, loadTests, benchmarks,
-    botService, chessStreaming, lichessBridgeService
+    botService, chessStreaming, lichessBridgeService,
+    arenaEvents, arenaCore, arenaWriterJsonl, arenaWriterKafka, sparkAnalytics, arenaBotsHeuristic, arenaBotsUci,
+    arenaBotsAi,
+    arenaDemoHeuristic, arenaDemoKafka, arenaDemoStockfish, arenaDemoAi
   )
